// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.server.v1;

import "engula/v1/metadata.proto";
import "engula/server/v1/metadata.proto";

service Root {
  rpc Watch(WatchRequest) returns (stream WatchResponse) {}
}

message WatchRequest { uint64 sequence = 1; }

message WatchResponse {
  uint64 sequence = 1;

  message Snapshot {
    repeated NodeDesc nodes = 1;
    repeated GroupDesc groups = 2;
    repeated engula.v1.DatabaseDesc databases = 3;
    repeated engula.v1.CollectionDesc collections = 4;
  }

  Snapshot snapshot = 2;
}
