// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.v1;

message DatabaseDesc {
  uint64 id = 1;
  string name = 2;
}

message CollectionDesc {
  uint64 id = 1;
  string name = 2;
  uint64 db = 3; // database id

  message HashPartition {
    uint64 slots = 1;
    uint64 hasher = 2;
  }

  message RangePartition {}

  oneof partition {
    HashPartition hash = 4;
    RangePartition range = 5;
  }
}
