// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.server.v1;

import "metadata.proto";

service Root {
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {}
  rpc CreateNode(CreateNodeRequest) returns (CreateNodeResponse) {}
  rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse) {}
  rpc CreateDatabase(CreateDatabaseRequest) returns (CreateDatabaseResponse) {}
  rpc CreateCollection(CreateCollectionRequest)
      returns (CreateCollectionResponse) {}
}

message ListNodesRequest {}

message ListNodesResponse { repeated NodeDesc nodes = 1; }

message CreateNodeRequest { NodeDesc node = 1; }

message CreateNodeResponse { NodeDesc node = 1; }

message ListGroupsRequest {}

message ListGroupsResponse { repeated GroupDesc groups = 1; }

message CreateDatabaseRequest { DatabaseDesc database = 1; }

message CreateDatabaseResponse { DatabaseDesc database = 1; }

message CreateCollectionRequest { CollectionDesc collection = 1; }

message CreateCollectionResponse { CollectionDesc collection = 1; }
